# docparse

./: .gitignore  CHANGELOG.md  README.md  UI_README.md  app.py  main.py  papers_data.json  pyproject.toml
.github/workflows/: ci.yml
src/: abstract_extractor.py  paper_manager.py
templates/: index.html
tests/: __init__.py  test_abstract_extractor.py  test_app.py  test_paper_manager.py
