[project]
name = "docparse"
version = "0.2.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "docling>=2.65.0",
    "flask>=3.0.0",
]

[dependency-groups]
dev = [
    "commitizen>=4.10.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.14.10",
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true
